--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 			<td>Сортировка таблицы</td>
 		</tr>
     </table>
+<div>
+	<p>
+		<a href="https://pkholyavin.github.io/year4programming/">Программирование лингвистических задач (четвёртый курс)</a>
+	</p>
+</div>
 </body>
 
 </html>
