--- a/index.html
+++ b/index.html
@@ -50,14 +50,35 @@
             <td>Словари (dict)</td>
             <td><a href=d34_s07_maps.txt>d34_s07_maps.txt</a></td>
             <td>Частотные словари</td>
-		</tr>
-		<tr>
-			<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0311.ipynb>03.11.2022</a></td>
-			<td>Сравнимость<br>Сортировка: функция sorted() и метод sort()<br>Аргументы reverse и key<br>lambda-функции</td>
-			<td><a href=d07_s02_maps_tempo.txt>d07_s02_maps_tempo.txt</a></td>
-			<td>Сортировка таблицы</td>
-		</tr>
+	</tr>
+	<tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0311.ipynb>03.11.2022</a></td>
+		<td>Сравнимость<br>Сортировка: функция sorted() и метод sort()<br>Аргументы reverse и key<br>lambda-функции</td>
+		<td><a href=d07_s02_maps_tempo.txt>d07_s02_maps_tempo.txt</a></td>
+		<td>Сортировка таблицы</td>
+	</tr>
+	<tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1011.ipynb>10.11.2022</a></td>
+		<td>Функции I: аргументы функций, return</td>
+		<td></td>
+		<td>Реализация функции argmax в четырёх вариантах</td>
+	</tr>
     </table>
+<div>
+	<p>
+		<b>Проверочные работы:</b>
+	</p>
+</div>
+<table border="1" cellpadding="5">
+	<tr>
+		<th>Дата</th>
+		<th>Темы</th>
+	</tr>
+	<tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0311.ipynb>03.11.2022</a></td>
+		<td>Запись в текстовый файл<br>List comprehension</td>
+	</tr>
+</table>
 <div>
 	<p>
 		<a href="https://pkholyavin.github.io/year4programming/">Программирование лингвистических задач (четвёртый курс)</a>
