--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+<div>
+	<p>
+		<b>Лекции:</b>
+	</p>
+</div>
     <table border="1" cellpadding="5">
         <tr>
             <th>Дата</th>
