--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </table>
 <div>
 	<p>
-		<b>Проверочные работы:</b>
+		<b>Устные опросы:</b>
 	</p>
 </div>
 <table border="1" cellpadding="5">
