--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0610.ipynb>06.10.2022</a></td>
-            <td>Работа с текстовыми файлами: чтение, запись, создание<br>Escape sequences: \t, \n, \r<br>Кодировки: cp1251, utf-8<br>Методы строк: split(), rslpit(), strip(), rstrip(), lstrip()<br>"Сырые" строки (raw strings), f-строки</td>
+            <td>Работа с текстовыми файлами: чтение, запись, создание<br>Escape sequences: \t, \n, \r<br>Кодировки: cp1251, utf-8<br>Методы строк: split(), rsplit(), strip(), rstrip(), lstrip(), join()<br>"Сырые" строки (raw strings), f-строки</td>
             <td><a href=test.txt>test.txt</a><br><a href=d34_s07_maps.txt>d34_s07_maps.txt</a></td>
             <td>Разбиение текстового файла на части</td>
         </tr>
@@ -82,6 +82,10 @@
 	<tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0311.ipynb>03.11.2022</a></td>
 		<td>Запись в текстовый файл<br>List comprehension</td>
+	</tr>
+	<tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1011.ipynb>10.11.2022</a></td>
+		<td>Итерация по списку<br>Сортировка<br>Dictionary comprehension</td>
 	</tr>
 </table>
 <div>
