--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
             <th>Задание</th>
         </tr>
         <tr>
+            <td>08.09.2022</td>
+            <td>Введение<br>Переменные<br>Типы данных: числа, строки, элементарные операции<br>Функция print()</td>
+            <td></td>
+            <td>Возраст в днях</td>
+        </tr>
+        <tr>
+            <td>15.09.2022</td>
+            <td>Списки<br>Булевы значения и логические операторы<br>Оператор if<br>Функции len(), sum(), min(), max()</td>
+            <td></td>
+            <td>Возраст в днях (с високосностью)</td>
+        </tr>
+        <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2209.ipynb>22.09.2022</a></td>
             <td>Оператор вхождения<br>Цикл for<br>Инструменты для циклов: функции range(), enumerate(), zip()<br>Цикл while</td>
             <td></td>
-            <td>Возраст в днях (с високосностью)</td>
+            <td>Возраст в днях (с високосностью) II</td>
         </tr>
         <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2909.ipynb>29.09.2022</a></td>
