--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <th>Задание</th>
         </tr>
         <tr>
+            <th colspan="4">Семестр 1</th>
+        </tr>
+        <tr>
             <td>08.09.2022</td>
             <td>Введение<br>Переменные<br>Типы данных: числа, строки, элементарные операции<br>Функция print()</td>
             <td></td>
@@ -67,19 +70,76 @@
             <td>Словари (dict)</td>
             <td><a href=d34_s07_maps.txt>d34_s07_maps.txt</a></td>
             <td>Частотные словари</td>
-	</tr>
-	<tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0311.ipynb>03.11.2022</a></td>
-		<td>Сравнимость<br>Сортировка: функция sorted() и метод sort()<br>Аргументы reverse и key<br>lambda-функции</td>
-		<td><a href=d07_s02_maps_tempo.txt>d07_s02_maps_tempo.txt</a></td>
-		<td>Сортировка таблицы</td>
-	</tr>
-	<tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1011.ipynb>10.11.2022</a></td>
-		<td>Функции I: аргументы функций, return</td>
-		<td></td>
-		<td>Реализация функции argmax в четырёх вариантах</td>
-	</tr>
+        </tr>
+        <tr>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0311.ipynb>03.11.2022</a></td>
+            <td>Сравнимость<br>Сортировка: функция sorted() и метод sort()<br>Аргументы reverse и key<br>lambda-функции</td>
+            <td><a href=d07_s02_maps_tempo.txt>d07_s02_maps_tempo.txt</a></td>
+            <td>Сортировка таблицы</td>
+        </tr>
+        <tr>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1011.ipynb>10.11.2022</a></td>
+            <td>Функции I: аргументы функций, return</td>
+            <td></td>
+            <td>Реализация функции argmax в четырёх вариантах</td>
+        </tr>
+        <tr>
+            <td>17.11.2022</td>
+            <td><i>Функции II: возвращение нескольких значений<br>Позиционные и именованные аргументы<br>Изменяемые объекты как аргументы<br>Поверхностное и глубокое копирование</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>24.11.2022</td>
+            <td><i>Функция main()<br>import<br>Докстринги</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>01.12.2022</td>
+            <td><i>Отладка и тестирование программы</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>08.12.2022</td>
+            <td><i>Вычисление вероятностей последовательностей слов</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>15.12.2022</td>
+            <td><i>Чтение и запись файлов аннотации WaveAssistant (.seg)</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>22.12.2022</td>
+            <td><i>Установка сторонних библиотек: pip, PyCharm<br>Модуль tgt для работы с файлами аннотации Praat (.TextGrid)</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th colspan="4">Семестр 2</th>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Регулярные выражения I-III</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Чтение и запись файлов .wav и .pcm I-II</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Работа со звуковыми файлами и файлами разметки</i></td>
+            <td></td>
+            <td></td>
+        </tr>
     </table>
 <div>
 	<p>
@@ -91,6 +151,9 @@
 		<th>Дата</th>
 		<th>Темы</th>
 	</tr>
+    <tr>
+        <th colspan="2">Семестр 1</th>
+    </tr>
 	<tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0311.ipynb>03.11.2022</a></td>
 		<td>Запись в текстовый файл<br>List comprehension</td>
