--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
         </tr>
         <tr>
             <td>08.12.2022</td>
-            <td><i>Вычисление вероятностей последовательностей слов</i></td>
+            <td><i>Итераторы<br>Ключевое слово yield<br>Модуль itertools</i></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>15.12.2022</td>
-            <td><i>Чтение и запись файлов аннотации WaveAssistant (.seg)</i></td>
+            <td><i>Функции map() и filter()<br>functools.reduce()</i></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>22.12.2022</td>
-            <td><i>Установка сторонних библиотек: pip, PyCharm<br>Модуль tgt для работы с файлами аннотации Praat (.TextGrid)</i></td>
+            <td><i>Модули collections и random</i></td>
             <td></td>
             <td></td>
         </tr>
@@ -124,7 +124,31 @@
         </tr>
         <tr>
             <td>...</td>
-            <td><i>Регулярные выражения I-III</i></td>
+            <td><i>Вычисление вероятностей последовательностей слов</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Методы строк<br>Регулярные выражения I-III</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Установка сторонних библиотек: pip, PyCharm<br>Чтение документации</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Чтение и запись файлов аннотации WaveAssistant (.seg)</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i>Модуль tgt для работы с файлами аннотации Praat (.TextGrid) 	</i></td>
             <td></td>
             <td></td>
         </tr>
@@ -137,6 +161,12 @@
         <tr>
             <td>...</td>
             <td><i>Работа со звуковыми файлами и файлами разметки</i></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>...</td>
+            <td><i></i></td>
             <td></td>
             <td></td>
         </tr>
