--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@ a {
             <td>Реализация функции argmax в четырёх вариантах</td>
         </tr>
         <tr>
-            <td>17.11.2022</td>
-            <td><i>Функции II: возвращение нескольких значений<br>Позиционные и именованные аргументы<br>Изменяемые объекты как аргументы<br>Поверхностное и глубокое копирование</i></td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1711.ipynb>17.11.2022</a></td>
+            <td>Функции II: возвращение нескольких значений<br>Позиционные и именованные аргументы<br>Изменяемые объекты как аргументы<br>Поверхностное и глубокое копирование</td>
             <td></td>
-            <td></td>
+            <td>Операции с матрицами: функции</td>
         </tr>
         <tr>
             <td>24.11.2022</td>
