--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ a {
             <td>Операции с матрицами II: Function Boogaloo</td>
         </tr>
         <tr>
-            <td>24.11.2022</td>
-            <td><i>Функция main()<br>import<br>Докстринги</i></td>
-            <td></td>
-            <td></td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2411.ipynb>24.11.2022</a></td>
+            <td>Функция main()<br>import<br>Докстринги</td>
+            <td><a href=print_nums.py>print_nums.py</a><br><a href=print_nums2.py>print_nums2.py</a><a href=print_nums3.py>print_nums3.py</a></td>
+            <td>Операции с матрицами III: Revolution</td>
         </tr>
         <tr>
             <td>01.12.2022</td>
@@ -214,6 +214,10 @@ a {
 	<tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1011.ipynb>10.11.2022</a></td>
 		<td>Итерация по списку<br>Сортировка<br>Dictionary comprehension</td>
+	</tr>
+    <tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1711.ipynb>17.11.2022</a></td>
+		<td>Dictionary comprehension<br>Функции</td>
 	</tr>
 </table>
 <div>
