--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a {
         <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2411.ipynb>24.11.2022</a></td>
             <td>Функция main()<br>import<br>Докстринги</td>
-            <td><a href=print_nums.py>print_nums.py</a><br><a href=print_nums2.py>print_nums2.py</a><a href=print_nums3.py>print_nums3.py</a></td>
+            <td><a href=print_nums.py>print_nums.py</a><br><a href=print_nums2.py>print_nums2.py</a><br><a href=print_nums3.py>print_nums3.py</a></td>
             <td>Операции с матрицами III: Revolution</td>
         </tr>
         <tr>
