--- a/index.html
+++ b/index.html
@@ -215,9 +215,13 @@ a {
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1011.ipynb>10.11.2022</a></td>
 		<td>Итерация по списку<br>Сортировка<br>Dictionary comprehension</td>
 	</tr>
-    <tr>
+        <tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1711.ipynb>17.11.2022</a></td>
 		<td>Dictionary comprehension<br>Функции</td>
+	</tr>
+        <tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2411.ipynb>24.11.2022</a></td>
+		<td>Функции<br>Возвращение None<br>Возвращение кортежа</td>
 	</tr>
 </table>
 <div>
