--- a/index.html
+++ b/index.html
@@ -203,25 +203,30 @@ a {
 	<tr>
 		<th>Дата</th>
 		<th>Темы</th>
+        <th>Ответы</th>
 	</tr>
     <tr>
-        <th colspan="2">Семестр 1</th>
+        <th colspan="3">Семестр 1</th>
     </tr>
 	<tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0311.ipynb>03.11.2022</a></td>
 		<td>Запись в текстовый файл<br>List comprehension</td>
+        <td><a href=ans_0311.txt>ans_0311.txt</a></td>
 	</tr>
 	<tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1011.ipynb>10.11.2022</a></td>
 		<td>Итерация по списку<br>Сортировка<br>Dictionary comprehension</td>
+        <td><a href=ans_1011.txt>ans_1011.txt</a></td>
 	</tr>
         <tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1711.ipynb>17.11.2022</a></td>
 		<td>Dictionary comprehension<br>Функции</td>
+        <td><a href=ans_1711.txt>ans_1711.txt</a></td>
 	</tr>
         <tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2411.ipynb>24.11.2022</a></td>
 		<td>Функции<br>Возвращение None<br>Возвращение кортежа</td>
+        <td><a href=ans_2411.txt>ans_2411.txt</a></td>
 	</tr>
 </table>
 <div>
