--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ a {
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1711.ipynb>17.11.2022</a></td>
             <td>Функции II: возвращение нескольких значений<br>Позиционные и именованные аргументы<br>Изменяемые объекты как аргументы<br>Поверхностное и глубокое копирование</td>
             <td></td>
-            <td>Операции с матрицами II: Function Boogaloo</td>
+            <td>Операции с матрицами II: <a href="https://en.wikipedia.org/wiki/Breakin%27_2:_Electric_Boogaloo#Legacy">Function Boogaloo</a></td>
         </tr>
         <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2411.ipynb>24.11.2022</a></td>
@@ -119,10 +119,10 @@ a {
             <td>Операции с матрицами III: Revolution</td>
         </tr>
         <tr>
-            <td>01.12.2022</td>
-            <td><i>Отладка и тестирование программы</i></td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0112.ipynb>01.12.2022</a></td>
+            <td>Отладка и тестирование программы<br>try/except/else/finally<br>raise<br>assert</td>
             <td></td>
-            <td></td>
+            <td>Операции с матрицами IV: Exceptionally Good</td>
         </tr>
         <tr>
             <td>08.12.2022</td>
