--- a/index.html
+++ b/index.html
@@ -226,7 +226,12 @@ a {
         <tr>
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2411.ipynb>24.11.2022</a></td>
 		<td>Функции<br>Возвращение None<br>Возвращение кортежа</td>
-        <td><a href=ans_2411.txt>ans_2411.txt</a></td>
+        	<td><a href=ans_2411.txt>ans_2411.txt</a></td>
+	</tr>
+	<tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0112.ipynb>01.12.2022</a></td>
+		<td>"Умножение" списка на число<br>Поверхностное копирование<br>Методы работы со строками</td>
+        	<td><a href=ans_2411.txt>ans_0112.txt</a></td>
 	</tr>
 </table>
 <div>
