--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a {
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0112.ipynb>01.12.2022</a></td>
             <td>Отладка и тестирование программы<br>try/except/else/finally<br>raise<br>assert</td>
             <td></td>
-            <td>Операции с матрицами IV: Exceptionally Good</td>
+            <td>Операции с матрицами IV: <a href="https://tvtropes.org/pmwiki/pmwiki.php/Main/PunBasedTitle">Exceptionally Good</a></td>
         </tr>
         <tr>
             <td>08.12.2022</td>
