--- a/index.html
+++ b/index.html
@@ -235,9 +235,46 @@ a {
 	</tr>
 </table>
 <div>
+    <p>
+		<b>Полезные ссылки:</b>
+	</p>
+    <p>
+        <a href="https://docs.python.org/3/">Документация к языку Python</a>
+    </p>
+    <p>
+        <a href="https://openedu.ru/course/hse/PYTHONBASICS/">Основы программирования на Python (курс НИУ ВШЭ)</a>
+    </p>
+    <p>
+        <a href="https://developers.google.com/edu/python">Google's Python Class</a>
+    </p>
+    <p>
+        <a href="https://leetcode.com/">LeetCode: банк задач по программированию</a>
+    </p>
 	<p>
 		<a href="https://pkholyavin.github.io/year4programming/">Программирование лингвистических задач (четвёртый курс)</a>
 	</p>
+    <p>
+        <a href="https://www.jetbrains.com/pycharm/">Среда разработки PyCharm</a>
+    </p>
+    <p>
+        <a href="https://code.visualstudio.com/">Среда разработки Visual Studio Code</a>
+    </p>
+    <p>
+        <a href="https://thonny.org/">Среда разработки для начинающих Thonny</a>
+    </p>
+    <p>
+        <a href="https://jupyter.org/">Jupyter Notebook</a>
+    </p>
+</div>
+<div>
+    <p>
+		<b>Список дополнительной литературы:</b>
+	</p>
+    <ol>
+    <li>Марк Лутц, Программирование на Python, 4-е изд., в 2-х т. Символ-Плюс, 2011</li>
+    <li>Марк Лутц, Изучаем Python, 4-е изд., Символ-Плюс, 2011</li>
+    <li>Б. Керниган, Р. Пайк, Практика программирования, Невский диалект, 2001</li>
+    </ol>
 </div>
 </body>
 
