--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@ a {
         </tr>
         <tr>
             <td>08.12.2022</td>
-            <td><i>Итераторы<br>Ключевое слово yield<br>Модуль itertools</i></td>
-            <td></td>
-            <td></td>
+            <td>Итераторы<br>Функции map() и filter()<br>Модуль itertools</td>
+            <td><a href="fpt.txt">fpt.txt</td>
+            <td>Подсчёт сочетаний букв</td>
         </tr>
         <tr>
             <td>15.12.2022</td>
-            <td><i>Функции map() и filter()<br>functools.reduce()</i></td>
+            <td><i>Работа с файловыми системами</i></td>
             <td></td>
             <td></td>
         </tr>
