--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ a {
             <td>Операции с матрицами IV: <a href="https://tvtropes.org/pmwiki/pmwiki.php/Main/PunBasedTitle">Exceptionally Good</a></td>
         </tr>
         <tr>
-            <td>08.12.2022</td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0812.ipynb>08.12.2022</a></td>
             <td>Итераторы<br>Функции map() и filter()<br>Модуль itertools</td>
             <td><a href="fpt.txt">fpt.txt</td>
             <td>Подсчёт сочетаний букв</td>
