--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@ a {
 		<td>"Умножение" списка на число<br>Поверхностное копирование<br>Методы работы со строками</td>
         	<td><a href=ans_0112.txt>ans_0112.txt</a></td>
 	</tr>
+    <tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0812.ipynb>08.12.2022</a></td>
+		<td>Типы исключений<br>Итерация по индексам и элементам</td>
+        	<td><a href=ans_0812.txt>ans_0812.txt</a></td>
+	</tr>
 </table>
 <div>
     <p>
