--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@ a {
         <tr>
             <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0812.ipynb>08.12.2022</a></td>
             <td>Итераторы<br>Функции map() и filter()<br>Модуль itertools</td>
-            <td><a href="fpt.txt">fpt.txt</td>
+            <td><a href="fpt.txt">fpt.txt</a></td>
             <td>Подсчёт сочетаний букв</td>
         </tr>
         <tr>
-            <td>15.12.2022</td>
-            <td><i>Работа с файловыми системами</i></td>
-            <td></td>
-            <td></td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1512.ipynb>15.12.2022</a></td>
+            <td>Работа с файловыми системами</td>
+            <td><a href="texts.zip">texts.zip</a></td>
+            <td>Подсчёт сочетаний букв II</td>
         </tr>
         <tr>
             <td>22.12.2022</td>
