--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@ a {
 		<td>Типы исключений<br>Итерация по индексам и элементам</td>
         	<td><a href=ans_0812.txt>ans_0812.txt</a></td>
 	</tr>
+    <tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1512.ipynb>15.12.2022</a></td>
+		<td>List comprehension</td>
+        	<td><a href=ans_1512.txt>ans_1512.txt</a></td>
+	</tr>
 </table>
 <div>
     <p>
