--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ a {
             <td>Подсчёт сочетаний букв II</td>
         </tr>
         <tr>
-            <td>22.12.2022</td>
-            <td><i>Модули collections и random</i></td>
+            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2212.ipynb>22.12.2022</a></td>
+            <td>Модули collections и random</td>
             <td></td>
-            <td></td>
+            <td>Задание на каникулы: рассказ про встроенный модуль Python на выбор</td>
         </tr>
         <tr>
             <th colspan="4">Семестр 2</th>
@@ -242,6 +242,11 @@ a {
 		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1512.ipynb>15.12.2022</a></td>
 		<td>List comprehension</td>
         	<td><a href=ans_1512.txt>ans_1512.txt</a></td>
+	</tr>
+    <tr>
+		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2212.ipynb>22.12.2022</a></td>
+		<td>Шифр Цезаря</td>
+        <td></td>
 	</tr>
 </table>
 <div>
