--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Основы программирования</title>
+<title>Разработка и реализация алгоритмов с использованием языка Python</title>
 
 <head>
 	<link rel="shortcut icon"
@@ -47,149 +47,8 @@ a {
             <th colspan="4">Семестр 1</th>
         </tr>
         <tr>
-            <td>08.09.2022</td>
-            <td>Введение<br>Переменные<br>Типы данных: числа, строки, элементарные операции<br>Функция print()</td>
-            <td></td>
-            <td>Возраст в днях</td>
-        </tr>
-        <tr>
-            <td>15.09.2022</td>
-            <td>Списки<br>Булевы значения и логические операторы<br>Оператор if<br>Функции len(), sum(), min(), max()</td>
-            <td></td>
-            <td>Возраст в днях (с високосностью)</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2209.ipynb>22.09.2022</a></td>
-            <td>Оператор вхождения<br>Цикл for<br>Инструменты для циклов: функции range(), enumerate(), zip()<br>Цикл while</td>
-            <td></td>
-            <td>Возраст в днях (с високосностью) II</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2909.ipynb>29.09.2022</a></td>
-            <td>Порядок выполнения (control flow): break, continue, sys.exit()</td>
-            <td></td>
-            <td>Валидность автомобильного номера</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0610.ipynb>06.10.2022</a></td>
-            <td>Работа с текстовыми файлами: чтение, запись, создание<br>Escape sequences: \t, \n, \r<br>Кодировки: cp1251, utf-8<br>Методы строк: split(), rsplit(), strip(), rstrip(), lstrip(), join()<br>"Сырые" строки (raw strings), f-строки</td>
-            <td><a href=test.txt>test.txt</a><br><a href=d34_s07_maps.txt>d34_s07_maps.txt</a></td>
-            <td>Разбиение текстового файла на части</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1310.ipynb>13.10.2022</a></td>
-            <td>Тернарный оператор<br>Списковое включение (генераторы списков, list comprehension)<br>Функции all() и any()<br>Функция isinstance()</td>
-            <td></td>
-            <td>Операции с матрицами</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2010.ipynb>20.10.2022</a></td>
-            <td>Кортежи (tuple)<br>Упаковка и распаковка (packing and unpacking)<br>Множества (set)<br>Функция reduce()</td>
-            <td><a href=numbers.txt>numbers.txt</a></td>
-            <td>Множества и кортежи: файл с числами</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2710.ipynb>27.10.2022</a></td>
-            <td>Словари (dict)</td>
-            <td><a href=d34_s07_maps.txt>d34_s07_maps.txt</a></td>
-            <td>Частотные словари</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0311.ipynb>03.11.2022</a></td>
-            <td>Сравнимость<br>Сортировка: функция sorted() и метод sort()<br>Аргументы reverse и key<br>lambda-функции</td>
-            <td><a href=d07_s02_maps_tempo.txt>d07_s02_maps_tempo.txt</a></td>
-            <td>Сортировка таблицы</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1011.ipynb>10.11.2022</a></td>
-            <td>Функции I: аргументы функций, return</td>
-            <td></td>
-            <td>Реализация функции argmax в четырёх вариантах</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1711.ipynb>17.11.2022</a></td>
-            <td>Функции II: возвращение нескольких значений<br>Позиционные и именованные аргументы<br>Изменяемые объекты как аргументы<br>Поверхностное и глубокое копирование</td>
-            <td></td>
-            <td>Операции с матрицами II: <a href="https://en.wikipedia.org/wiki/Breakin%27_2:_Electric_Boogaloo#Legacy">Function Boogaloo</a></td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2411.ipynb>24.11.2022</a></td>
-            <td>Функция main()<br>import<br>Докстринги</td>
-            <td><a href=print_nums.py>print_nums.py</a><br><a href=print_nums2.py>print_nums2.py</a><br><a href=print_nums3.py>print_nums3.py</a></td>
-            <td>Операции с матрицами III: Revolution</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0112.ipynb>01.12.2022</a></td>
-            <td>Отладка и тестирование программы<br>try/except/else/finally<br>raise<br>assert</td>
-            <td></td>
-            <td>Операции с матрицами IV: <a href="https://tvtropes.org/pmwiki/pmwiki.php/Main/PunBasedTitle">Exceptionally Good</a></td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/0812.ipynb>08.12.2022</a></td>
-            <td>Итераторы<br>Функции map() и filter()<br>Модуль itertools</td>
-            <td><a href="fpt.txt">fpt.txt</a></td>
-            <td>Подсчёт сочетаний букв</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/1512.ipynb>15.12.2022</a></td>
-            <td>Работа с файловыми системами</td>
-            <td><a href="texts.zip">texts.zip</a></td>
-            <td>Подсчёт сочетаний букв II</td>
-        </tr>
-        <tr>
-            <td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/2212.ipynb>22.12.2022</a></td>
-            <td>Модули collections и random</td>
-            <td></td>
-            <td>Задание на каникулы: рассказ про встроенный модуль Python на выбор</td>
-        </tr>
-        <tr>
-            <th colspan="4">Семестр 2</th>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Вычисление вероятностей последовательностей слов</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Методы строк<br>Регулярные выражения I-III</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Установка сторонних библиотек: pip, PyCharm<br>Чтение документации</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Чтение и запись файлов аннотации WaveAssistant (.seg)</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Модуль tgt для работы с файлами аннотации Praat (.TextGrid) 	</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Чтение и запись файлов .wav и .pcm I-II</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i>Работа со звуковыми файлами и файлами разметки</i></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>...</td>
-            <td><i></i></td>
+            <td>11.02.2023</td>
+            <td>Повторение. Классы</td>
             <td></td>
             <td></td>
         </tr>
@@ -204,49 +63,6 @@ a {
 		<th>Дата</th>
 		<th>Темы</th>
         <th>Ответы</th>
-	</tr>
-    <tr>
-        <th colspan="3">Семестр 1</th>
-    </tr>
-	<tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0311.ipynb>03.11.2022</a></td>
-		<td>Запись в текстовый файл<br>List comprehension</td>
-        <td><a href=ans_0311.txt>ans_0311.txt</a></td>
-	</tr>
-	<tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1011.ipynb>10.11.2022</a></td>
-		<td>Итерация по списку<br>Сортировка<br>Dictionary comprehension</td>
-        <td><a href=ans_1011.txt>ans_1011.txt</a></td>
-	</tr>
-        <tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1711.ipynb>17.11.2022</a></td>
-		<td>Dictionary comprehension<br>Функции</td>
-        <td><a href=ans_1711.txt>ans_1711.txt</a></td>
-	</tr>
-        <tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2411.ipynb>24.11.2022</a></td>
-		<td>Функции<br>Возвращение None<br>Возвращение кортежа</td>
-        	<td><a href=ans_2411.txt>ans_2411.txt</a></td>
-	</tr>
-	<tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0112.ipynb>01.12.2022</a></td>
-		<td>"Умножение" списка на число<br>Поверхностное копирование<br>Методы работы со строками</td>
-        	<td><a href=ans_0112.txt>ans_0112.txt</a></td>
-	</tr>
-    <tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_0812.ipynb>08.12.2022</a></td>
-		<td>Типы исключений<br>Итерация по индексам и элементам</td>
-        	<td><a href=ans_0812.txt>ans_0812.txt</a></td>
-	</tr>
-    <tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_1512.ipynb>15.12.2022</a></td>
-		<td>List comprehension</td>
-        	<td><a href=ans_1512.txt>ans_1512.txt</a></td>
-	</tr>
-    <tr>
-		<td><a href=https://colab.research.google.com/github/PKholyavin/year2programming/blob/main/pop_quiz_2212.ipynb>22.12.2022</a></td>
-		<td>Шифр Цезаря</td>
-        <td><a href=caesar.py>caesar.py</a></td>
 	</tr>
 </table>
 <div>
@@ -265,6 +81,9 @@ a {
     <p>
         <a href="https://leetcode.com/">LeetCode: банк задач по программированию</a>
     </p>
+    <p>
+		<a href="https://pkholyavin.github.io/year2programming/">Основы программирования (второй курс)</a>
+	</p>
 	<p>
 		<a href="https://pkholyavin.github.io/year4programming/">Программирование лингвистических задач (четвёртый курс)</a>
 	</p>
