--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@ a {
             <th colspan="4">Семестр 1</th>
         </tr>
         <tr>
-            <td>11.02.2023</td>
+            <td><a href="https://colab.research.google.com/drive/1OobLuQRllyCa2JbVxSv38hXEyT33sN__?usp=sharing">11.02.2023</a></td>
             <td>Повторение. Классы</td>
             <td></td>
             <td></td>
+        </tr>
+        <tr>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/1602.ipynb">16.02.2023</a></td>
+            <td>Волшебные методы классов</td>
+            <td></td>
+            <td><a href="cta0001_22k.wav">cta0001_22k.wav</a><br><a href="cta0001_22k.seg_B2">cta0001_22k.seg_B2</a><br><a href="cta0001_44k.wav">cta0001_44k.wav</a></td>
         </tr>
     </table>
 <div>
@@ -64,6 +70,11 @@ a {
 		<th>Темы</th>
         <th>Ответы</th>
 	</tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/1602.ipynb">16.02.2023</a></td>
+        <td>Изменяемые объекты. Чтение файлов</td>
+        <td>NA</td>
+    </tr>
 </table>
 <div>
     <p>
