--- a/index.html
+++ b/index.html
@@ -50,13 +50,25 @@ a {
             <td><a href="https://colab.research.google.com/drive/1OobLuQRllyCa2JbVxSv38hXEyT33sN__?usp=sharing">11.02.2023</a></td>
             <td>Повторение. Классы</td>
             <td></td>
-            <td></td>
+            <td>Студенты I: исключение</td>
         </tr>
         <tr>
             <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/1602.ipynb">16.02.2023</a></td>
             <td>Волшебные методы классов</td>
             <td></td>
-            <td><a href="cta0001_22k.wav">cta0001_22k.wav</a><br><a href="cta0001_22k.seg_B2">cta0001_22k.seg_B2</a><br><a href="cta0001_44k.wav">cta0001_44k.wav</a></td>
+            <td>Студенты II: расписание</td>
+        </tr>
+        <tr>
+            <td><i>25.02.2023</i></td>
+            <td>Методы для арифметических операций</td>
+            <td></td>
+            <td>Матрицы</td>
+        </tr>
+        <tr>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/0203.ipynb">02.03.2023</a></td>
+            <td>Наследование классов</td>
+            <td></td>
+            <td>Студенты III: бакалавры и магистры</td>
         </tr>
     </table>
 <div>
@@ -68,11 +80,19 @@ a {
 	<tr>
 		<th>Дата</th>
 		<th>Темы</th>
+        <th>Файлы</th>
         <th>Ответы</th>
 	</tr>
     <tr>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_1602.ipynb">16.02.2023</a></td>
         <td>Изменяемые объекты. Чтение файлов</td>
+        <td><a href="cta0001_22k.wav">cta0001_22k.wav</a><br><a href="cta0001_22k.seg_B2">cta0001_22k.seg_B2</a><br><a href="cta0001_44k.wav">cta0001_44k.wav</a></td>
+        <td>NA</td>
+    </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0203.ipynb">02.03.2023</a></td>
+        <td>Работа с текстом. Регулярные выражения</td>
+        <td></td>
         <td>NA</td>
     </tr>
 </table>
