--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ a {
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0203.ipynb">02.03.2023</a></td>
         <td>Работа с текстом. Регулярные выражения</td>
         <td></td>
-        <td>NA</td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_0203.ipynb">ans_0203.ipynb</a></td>
     </tr>
 </table>
 <div>
