--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@ a {
             <td></td>
             <td>Студенты III: бакалавры и магистры</td>
         </tr>
+        <tr>
+            <td>09.03.2023</td>
+            <td>Односвязный список</td>
+            <td></td>
+            <td>Реализация методов класса LinkedList</td>
+        </tr>
     </table>
 <div>
 	<p>
@@ -87,13 +93,19 @@ a {
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_1602.ipynb">16.02.2023</a></td>
         <td>Изменяемые объекты. Чтение файлов</td>
         <td><a href="cta0001_22k.wav">cta0001_22k.wav</a><br><a href="cta0001_22k.seg_B2">cta0001_22k.seg_B2</a><br><a href="cta0001_44k.wav">cta0001_44k.wav</a></td>
-        <td>NA</td>
+        <td>TBA</td>
     </tr>
     <tr>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0203.ipynb">02.03.2023</a></td>
         <td>Работа с текстом. Регулярные выражения</td>
         <td></td>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_0203.ipynb">ans_0203.ipynb</a></td>
+    </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0903.ipynb">09.03.2023</a></td>
+        <td>Работа с числами. Сортировка</td>
+        <td></td>
+        <td>TBA</td>
     </tr>
 </table>
 <div>
