new theory and tasks

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ a {
             <td>Студенты III: бакалавры и магистры</td>
         </tr>
         <tr>
-            <td>09.03.2023</td>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/0903.ipynb">09.03.2023</a></td>
             <td>Односвязный список</td>
             <td></td>
-            <td>Реализация методов класса LinkedList</td>
+            <td>Реализация методов класса LinkedList:<br>поиск петель, удаление повторов, сортировка</td>
         </tr>
     </table>
 <div>
@@ -105,7 +105,7 @@ a {
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0903.ipynb">09.03.2023</a></td>
         <td>Работа с числами. Сортировка</td>
         <td></td>
-        <td>TBA</td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_0903.ipynb">ans_0903.ipynb</a></td>
     </tr>
 </table>
 <div>
