fixed pop quiz topics

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a {
     </tr>
     <tr>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0903.ipynb">09.03.2023</a></td>
-        <td>Работа с числами. Сортировка</td>
+        <td>f-строки. Работа с числами</td>
         <td></td>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_0903.ipynb">ans_0903.ipynb</a></td>
     </tr>
