--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@ a {
         <td></td>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_0903.ipynb">ans_0903.ipynb</a></td>
     </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_1603.ipynb">16.03.2023</a></td>
+        <td>Регулярные выражения. Рекурсивные и нерекурсивные алгоритмы</td>
+        <td><a href="flood_fill_test.txt">flood_fill_test.txt</a></td>
+        <td>TBA</td>
+    </tr>
 </table>
 <div>
     <p>
