updated class materials

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a {
     </table>
 <div>
 	<p>
-		<b>Устные опросы:</b>
+		<b>Задания для выполнения в классе:</b>
 	</p>
 </div>
 <table border="1" cellpadding="5">
@@ -109,7 +109,13 @@ a {
     </tr>
     <tr>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_1603.ipynb">16.03.2023</a></td>
-        <td>Регулярные выражения. Рекурсивные и нерекурсивные алгоритмы</td>
+        <td>Регулярные выражения</td>
+        <td></td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_1603.ipynb">ans_1603.ipynb</a></td>
+    </tr>
+    <tr>
+        <td>23.03.2023</td>
+        <td>Рекурсия</td>
         <td><a href="flood_fill_test.txt">flood_fill_test.txt</a></td>
         <td>TBA</td>
     </tr>
