--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@ a {
             <td></td>
             <td>Реализация методов класса LinkedList:<br>поиск петель, удаление повторов, сортировка</td>
         </tr>
+        <tr>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/1603.ipynb">16.03.2023</a></td>
+            <td>Двусвязный список</td>
+            <td></td>
+            <td>Реализация методов класса DoublyLinkedList:<br>удаление элементов с поддержкой краевых случаев</td>
+        </tr>
     </table>
 <div>
 	<p>
