--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a {
             <th>Задание</th>
         </tr>
         <tr>
-            <th colspan="4">Семестр 1</th>
+            <th colspan="4">Семестр 2</th>
         </tr>
         <tr>
             <td><a href="https://colab.research.google.com/drive/1OobLuQRllyCa2JbVxSv38hXEyT33sN__?usp=sharing">11.02.2023</a></td>
@@ -81,6 +81,12 @@ a {
             <td>Двусвязный список</td>
             <td></td>
             <td>Реализация методов класса DoublyLinkedList:<br>удаление элементов с поддержкой краевых случаев</td>
+        </tr>
+        <tr>
+            <td>23.03.2023</td>
+            <td>Стек. Очередь. Очередь с приоритетом</td>
+            <td></td>
+            <td>Реализация стека и очереди</td>
         </tr>
     </table>
 <div>
@@ -120,8 +126,10 @@ a {
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_1603.ipynb">ans_1603.ipynb</a></td>
     </tr>
     <tr>
-        <td>23.03.2023</td>
-        <td>Рекурсия</td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_2303.ipynb">23.03.2023</a>
+        <br><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/potato.ipynb">potato</a>
+        </td>
+        <td>potato<br>Рекурсия</td>
         <td><a href="flood_fill_test.txt">flood_fill_test.txt</a></td>
         <td>TBA</td>
     </tr>
