--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a {
             <td>Реализация методов класса DoublyLinkedList:<br>удаление элементов с поддержкой краевых случаев</td>
         </tr>
         <tr>
-            <td>23.03.2023</td>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/2303.ipynb">23.03.2023</a></td>
             <td>Стек. Очередь. Очередь с приоритетом</td>
             <td></td>
             <td>Реализация стека и очереди</td>
@@ -131,7 +131,7 @@ a {
         </td>
         <td>potato<br>Рекурсия</td>
         <td><a href="flood_fill_test.txt">flood_fill_test.txt</a></td>
-        <td>TBA</td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_2303.ipynb">ans_2303.ipynb</a></td>
     </tr>
 </table>
 <div>
