--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@ a {
             <td></td>
             <td>Реализация стека и очереди</td>
         </tr>
+        <tr>
+            <td>30.03.2023</td>
+            <td>Графы</td>
+            <td></td>
+            <td>Реализация графа</td>
+        </tr>
     </table>
 <div>
 	<p>
@@ -132,6 +138,12 @@ a {
         <td>potato<br>Рекурсия</td>
         <td><a href="flood_fill_test.txt">flood_fill_test.txt</a></td>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/ans_2303.ipynb">ans_2303.ipynb</a></td>
+    </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_3003.ipynb">30.03.2023</a></td>
+        <td>Расстояние Хэмминга<br>Wordle</td>
+        <td><a href="wordlist.txt">wordlist.txt</a><br><a href="answerlist.txt">answerlist.txt</a></td>
+        <td>TBA</td>
     </tr>
 </table>
 <div>
