upload class materials

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ a {
             <td>Реализация стека и очереди</td>
         </tr>
         <tr>
-            <td>30.03.2023</td>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/3003.ipynb">30.03.2023</a></td>
             <td>Графы</td>
             <td></td>
-            <td>Реализация графа</td>
+            <td>Реализация методов удаления узла для обеих версий класса Graph</td>
         </tr>
     </table>
 <div>
