--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@ a {
             <td></td>
             <td>Реализация методов удаления узла для обеих версий класса Graph</td>
         </tr>
+        <tr>
+            <td>06.04.2023</td>
+            <td>Поиск пути по графу. Взвешенные графы.<br><i>Цепи Маркова</i></td>
+            <td></td>
+            <td>TBD</td>
+        </tr>
     </table>
 <div>
 	<p>
@@ -143,6 +149,12 @@ a {
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_3003.ipynb">30.03.2023</a></td>
         <td>Расстояние Хэмминга<br>Wordle</td>
         <td><a href="wordlist.txt">wordlist.txt</a><br><a href="answerlist.txt">answerlist.txt</a></td>
+        <td>TBA</td>
+    </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06.04.2023</a></td>
+        <td>Игры со словами</td>
+        <td><a href="words_alpha.txt">words_alpha.txt</a></td>
         <td>TBA</td>
     </tr>
 </table>
