added class material

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ a {
         </tr>
         <tr>
             <td>06.04.2023</td>
-            <td>Поиск пути по графу. Взвешенные графы.<br><i>Цепи Маркова</i></td>
-            <td></td>
-            <td>TBD</td>
+            <td>Поиск пути по графу. Взвешенные графы.<br>Цепи Маркова</td>
+            <td><a href="duel.txt">duel.txt</a></td>
+            <td>Реализация поиска в глубину и в ширину для класса Graph (с матрицами смежности)</td>
         </tr>
     </table>
 <div>
