--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a {
             <td>Реализация методов удаления узла для обеих версий класса Graph</td>
         </tr>
         <tr>
-            <td>06.04.2023</td>
+            <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/0604.ipynb">06.04.2023</a></td>
             <td>Поиск пути по графу. Взвешенные графы.<br>Цепи Маркова</td>
             <td><a href="duel.txt">duel.txt</a></td>
             <td>Реализация поиска в глубину и в ширину для класса Graph (с матрицами смежности)</td>
