--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@ a {
             <td><a href="duel.txt">duel.txt</a></td>
             <td>Реализация поиска в глубину и в ширину для класса Graph (с матрицами смежности)</td>
         </tr>
+        <tr>
+            <td>20.04.2023</td>
+            <td>Деревья<br>Дерево бинарного поиска</td>
+            <td></td>
+            <td>TBD</td>
+        </tr>
     </table>
 <div>
 	<p>
@@ -152,7 +158,7 @@ a {
         <td>TBA</td>
     </tr>
     <tr>
-        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06.04.2023</a></td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06-20.04.2023</a></td>
         <td>Игры со словами</td>
         <td><a href="words_alpha.txt">words_alpha.txt</a></td>
         <td>TBA</td>
