--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ a {
     <tr>
         <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06-20.04.2023</a></td>
         <td>Игры со словами</td>
-        <td><a href="words_alpha.txt">words_alpha.txt</a></td>
+        <td><a href="words_alpha.txt">words_alpha.txt</a><br><a href="lexicon_lemmatized.txt">lexicon_lemmatized.txt</a></td>
         <td>TBA</td>
     </tr>
 </table>
