--- a/index.html
+++ b/index.html
@@ -101,10 +101,22 @@ a {
             <td>Реализация поиска в глубину и в ширину для класса Graph (с матрицами смежности)</td>
         </tr>
         <tr>
-            <td>20.04.2023</td>
+            <td>20-27.04.2023</td>
             <td>Деревья<br>Дерево бинарного поиска</td>
             <td></td>
-            <td>TBD</td>
+            <td>Реализация метода для визуализации дерева</td>
+        </tr>
+        <tr>
+            <td>04.05.2023</td>
+            <td>Перцептрон</td>
+            <td></td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>11.05.2023</td>
+            <td>Алгоритм кластеризации k-means</td>
+            <td></td>
+            <td>N/A</td>
         </tr>
     </table>
 <div>
@@ -158,9 +170,21 @@ a {
         <td>TBA</td>
     </tr>
     <tr>
-        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06-20.04.2023</a></td>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_0604.ipynb">06-27.04.2023</a></td>
         <td>Игры со словами</td>
         <td><a href="words_alpha.txt">words_alpha.txt</a><br><a href="lexicon_lemmatized.txt">lexicon_lemmatized.txt</a></td>
+        <td>TBA</td>
+    </tr>
+    <tr>
+        <td>04-11.05.2023</a></td>
+        <td>Алгоритмы сортировки</td>
+        <td></td>
+        <td>TBA</td>
+    </tr>
+    <tr>
+        <td><a href="https://colab.research.google.com/github/PKholyavin/year3programming/blob/main/pop_quiz_1805.ipynb">18.05.2023</a></a></td>
+        <td>matplotlib.pyplot</td>
+        <td><a href="https://drive.google.com/file/d/10ru71uwZamOvVuzV9jZUuPNf5-69v_am/view?usp=sharing">cta_seg_B2.zip</a></td>
         <td>TBA</td>
     </tr>
 </table>
